# Freighter

./: .gitignore  INSTALL (no dependencies).bat  INSTALL (no dependencies).sh  INSTALL.bat  INSTALL.sh  LICENSE  README.md  __init__.py  build.bat  devkit_tools.py  dolreader.py  doltools.py  gameSymbols.txt  gecko.txt  geckowrite.py  generate_readme.py  main.c  main.dol  project.py  pyproject.toml  setup.py  symbols.txt
compiler/: devkit_tools.py  dolreader.py  pikmin.dol  project - Copy.map  project.py  tmplink
dol_c_kit/: __init__.py  devkit_tools.py
examples/: example project.py
freighter/: __init__.py  __main__.py  arguments.py  cli.py  colors.py  config.py  console.py  constants.py  devkit_tools.py  doltools.py  exceptions.py  filehash.py  filelist.py  filemanager.py  hooks.py  logging.py  main.py  numerics.py  obj2grid.py  path.py  project.py  rarc.py  symbols.py  toml.py  yaz0.py
freighter/ansicolor/: __init__.py  __main__.py  ansicolor.py
freighter/fileformats/: __init__.py  binaryfile.py  bitcolorcache.py  bnr.py  gamecube_texture.py
headers/: controller.h  defines.h  example.h
source/: ctest.c  ctest.c.s  defines.inc  main.c  main.s  openFile disassembly.txt  places where openFile is used.txt  system.cpp - Copy.s  system.cpp.s  test.s
