[project]
name = "freighter"
dynamic = ["version"]
dependencies = ["dacite", "dolreader", "jsonpickle", "pyelftools", "geckolibs"]

description = "Kai's GameCube Toolkit enabling C/C++ code injection into .dol executables."
readme = "README.md"
license = { file = "LICENSE" }

authors = [{ name = "Kai (@kai13xd)", email = "akaisekai13@gmail.com" }]
maintainers = [{ name = "Kai (@kai13xd)", email = "akaisekai13@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Compilers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: Microsoft :: Windows",

]

[project.urls]
"Homepage" = "https://github.com/kai13xd/Freighter/"
"Bug Reports" = "https://github.com/kai13xd/Freighter/issues"
"Donate" = "https://ko-fi.com/kai13xd"

[project.scripts]
freighter = "freighter:main"

[build-system]
requires = ["setuptools>=67.6.1", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
include= ["freighter*"]

[tool.setuptools_scm]
write_to = "freighter/version.py"
local_scheme = "dirty-tag"