[tool.poetry]
name = "freighter"
version = "0.0.0"
description = "Kai's GameCube Toolkit enabling C/C++ code injection into .dol executables."
readme = "README.md"
license = "MIT"
authors = ["kai13xd <akaisekai13@gmail.com>"]
maintainers = ["kai13xd <akaisekai13@gmail.com>"]
repository = "https://github.com/kai13xd/Freighter/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Compilers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: Microsoft :: Windows",

]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
numpy = { version = "1.26.0b1", allow-prereleases = true, python = ">=3.9,<=3.12" }
pillow = "*"
dolreader = "*"
jsonpickle = "*"
pyelftools = "*"
geckolibs = "*"
attrs = "*"
moderngl = "*"


[tool.poetry.urls]
"Homepage" = "https://github.com/kai13xd/Freighter/"
"Bug Reports" = "https://github.com/kai13xd/Freighter/issues"
"Donate" = "https://ko-fi.com/kai13xd"

[tool.poetry.scripts]
freighter = "freighter:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format = "{base}.{distance}+{commit}.{dirty}"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
